--- a/Tranqueerity/src/main/style/styles.css
+++ b/Tranqueerity/src/main/style/styles.css
@@ -6,13 +6,15 @@
 }
 
 body {
-    background-color: #93B5CF;
+    background-color: black;
     height: 100vh;
     width: 100%;
     overflow-x: hidden;
 }
 
 .container {
+    border-radius: 24px;
+    background-color: #93B5CF;
     max-width: 400px;
     margin: 0 auto;
     padding: 20px 10px 100px;
@@ -52,7 +54,7 @@ body {
 
 .card {
     background-color: #D9D9D9;
-    border-radius: 24px;
+    border-radius: 25px;
     padding: 10px;
     position: relative;
 }
