--- a/Tranqueerity/src/main/style/recensioneStyle.css
+++ b/Tranqueerity/src/main/style/recensioneStyle.css
@@ -19,7 +19,7 @@ body {
     background-color: #93B5CF;
     border-radius: 24px;
     width: 100%;
-    max-width: 470px;
+    max-width: 400px;
     padding: 1rem;
     position: relative;
 }
@@ -139,13 +139,24 @@ body {
 }
 
 .circle-button {
-    width: 86px;
-    height: 86px;
+    width: 56px;
+    height: 56px;
     background-color: #0e2045;
     border-radius: 50%;
     margin: 1rem auto 0;
-    display: block;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+    cursor: pointer;
     border: none;
+    z-index: 10;
+}
+
+.circle-button img{
+    width: 32px;
+    height: 32px;
+    object-fit: contain;
 }
 
 .buttons-row {
