--- a/Tranqueerity/src/main/style/styles.css
+++ b/Tranqueerity/src/main/style/styles.css
@@ -137,3 +137,16 @@ body {
     object-fit: contain;
 }
 
+.top-left {
+    position: absolute;
+    top: 8px;
+    left: 8px;
+}
+
+.down-right {
+    position: absolute;
+    top: 8px;
+    left: 8px;
+    transform: rotate(180deg);
+}
+
