--- a/Tranqueerity/src/main/style/creazioneLuogo.css
+++ b/Tranqueerity/src/main/style/creazioneLuogo.css
@@ -110,6 +110,16 @@ textarea {
     background-color: #f0f0f0;
 }
 
+.button1 {
+    width: 100%;
+    padding: 10px;
+    border-radius: 10px;
+    border: none;
+    font-size: 16px;
+    background-color: #f0f0f0;
+    color: #333;
+}
+
 .add {
     position: fixed;
     bottom: 32px;
@@ -125,6 +135,14 @@ textarea {
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
     cursor: pointer;
     z-index: 10;
+}
+
+.add button{
+    background: none;
+    cursor: pointer;
+    width: 56px;
+    height: 56px;
+    border-radius: 50%;
 }
 
 .add-icon {
