--- a/Tranqueerity/src/main/style/recensioneStyle.css
+++ b/Tranqueerity/src/main/style/recensioneStyle.css
@@ -63,10 +63,43 @@ body {
 }
 
 .review-section {
-    background: #FCFAFF;
+    background-color: #D9D9D9;
     border-radius: 9px;
     padding: 0.75rem;
     margin-bottom: 1rem;
+}
+
+.text-area {
+    width: 100%;
+    padding: 10px;
+    border-radius: 10px;
+    border: none;
+    font-size: 16px;
+    background-color: #f0f0f0;
+    color: #333;
+    margin-bottom: 5px;
+}
+
+.button1 {
+    display:inline-block;
+    padding:0.7em 1.4em;
+    margin:0 0.7em 0.3em 0;
+    border:none;
+    border-radius:9px;
+    box-sizing: border-box;
+    text-decoration:none;
+    color:#333;
+    background-color: white;
+    box-shadow:inset 0 -0.6em 0 -0.3em rgba(0,0,0,0.20);
+    text-align:center;
+    position:relative;
+    cursor:pointer;
+}
+
+hr{
+    opacity: 50%;
+    margin-top: 5px;
+    margin-bottom: 5px;
 }
 
 .username {
