[FRONTEND] nuovoEvento.html and event.css MODIFIED

--- a/Tranqueerity/src/main/style/event.css
+++ b/Tranqueerity/src/main/style/event.css
@@ -107,3 +107,10 @@ textarea::placeholder {
     display: block;
     border: none;
 }
+
+.img-container {
+    width: 100%;
+    overflow: hidden;
+    border-radius: 15px;
+    margin-bottom: 1rem;
+}
