Aggiunta icone e ridirezione recensioneLuogo

--- a/Tranqueerity/src/main/style/recensioneStyle.css
+++ b/Tranqueerity/src/main/style/recensioneStyle.css
@@ -212,3 +212,17 @@ hr{
         margin-top: 2rem;
     }
 }
+
+#feedback-button{
+    position:inherit;
+    width: 60%;
+    height: 60%;
+}
+
+#event-button{
+    position:inherit;
+    width: 80%;
+    height: 80%;
+}
+
+
