--- a/Tranqueerity/src/main/style/recensioneStyle.css
+++ b/Tranqueerity/src/main/style/recensioneStyle.css
@@ -62,6 +62,20 @@ body {
     /*border: 1px solid #000;*/
 }
 
+.rating-review {
+    display: flex;
+    gap: 0.1rem;
+    margin-bottom: 1rem;
+}
+
+.r-icon {
+    width: 23px;
+    height: 21px;
+    background: rgba(255, 255, 255, 0.1);
+    border-radius: 50%;
+    /*border: 1px solid #000;*/
+}
+
 .review-section {
     background-color: #D9D9D9;
     border-radius: 9px;
