--- a/Tranqueerity/src/main/style/recensioneStyle.css
+++ b/Tranqueerity/src/main/style/recensioneStyle.css
@@ -76,6 +76,20 @@ body {
     /*border: 1px solid #000;*/
 }
 
+.report-button{
+    margin-left: 60%;
+    max-height: 21px;
+    opacity: 55%;
+    cursor: pointer;
+}
+
+.report-button:hover{
+    max-height: 37px;
+    opacity: 95%;
+    cursor: pointer;
+    transition-duration: 0.35s;
+}
+
 .review-section {
     background-color: #D9D9D9;
     border-radius: 9px;
