--- a/Tranqueerity/src/main/style/styles.css
+++ b/Tranqueerity/src/main/style/styles.css
@@ -130,3 +130,22 @@ body {
     transform: rotate(180deg);
 }
 
+.search-text {
+    margin-left: 8px;
+    background-color:#D9D9D9;
+    padding: 5px;
+    border-color: transparent;
+}
+
+.search-locat {
+    position: relative;
+    display:flex;
+    justify-content: flex-end;
+    background-color:gray;
+    border-radius: 50px;
+    margin-left: 25%;
+    max-height: 30px;
+    max-width: 35px;
+}
+
+
