--- a/Tranqueerity/src/main/style/styles.css
+++ b/Tranqueerity/src/main/style/styles.css
@@ -148,4 +148,12 @@ body {
     max-width: 35px;
 }
 
+.logo{
+    top: 22px;
+    left: 20px;
+    max-height: 60px;
+    max-width: 60px;
+    position: absolute;
+}
+
 
