--- a/Tranqueerity/src/main/style/recensioneStyle.css
+++ b/Tranqueerity/src/main/style/recensioneStyle.css
@@ -7,6 +7,9 @@
 body {
     font-family: Inter, sans-serif;
     background: black;
+    height: 100vh;
+    width: 100%;
+    overflow-x: hidden;
 }
 
 .container {
@@ -16,12 +19,14 @@ body {
 }
 
 .card {
+    width: 400px;
+    height: 870px;
     background-color: #93B5CF;
     border-radius: 24px;
-    width: 100%;
     max-width: 400px;
-    padding: 1rem;
+    padding: 20px 15px 95px;
     position: relative;
+    margin: 0 auto;
 }
 
 .img-container {
@@ -199,19 +204,35 @@ hr{
     border: none;
 }
 
-.circle-button {
+.circle {
+    position: fixed;
+    bottom: 32px;
+    left: 50%;
+    transform: translateX(-50%);
     width: 56px;
     height: 56px;
-    background-color: #0e2045;
+    background-color:#0e2045;
     border-radius: 50%;
-    margin: 1rem auto 0;
     display: flex;
     align-items: center;
     justify-content: center;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
     cursor: pointer;
-    border: none;
     z-index: 10;
+}
+
+.circle button{
+    background: none;
+    cursor: pointer;
+    width: 56px;
+    height: 56px;
+    border-radius: 50%;
+}
+
+.circle-icon {
+    width: 32px;
+    height: 32px;
+    object-fit: contain;
 }
 
 .circle-button img{
