--- a/Tranqueerity/src/main/style/styles.css
+++ b/Tranqueerity/src/main/style/styles.css
@@ -13,6 +13,8 @@ body {
 }
 
 .container {
+    width: 400px;
+    height: 870px;
     border-radius: 24px;
     background-color: #93B5CF;
     max-width: 400px;
