--- a/Tranqueerity/src/main/style/event.css
+++ b/Tranqueerity/src/main/style/event.css
@@ -8,17 +8,65 @@
 body {
     font-family: Inter, sans-serif;
     background: black;
+    height: 100vh;
+    width: 100%;
+    overflow-x: hidden;
 }
 
-.event {
-    padding: 0;
-    text-align: center;
-    background: linear-gradient(to bottom, #c765d1, #cb7bd3);
-    border-top-left-radius: 80% 20%;
-    border-top-right-radius: 80% 20%;
-    margin-top: -20px;
-    padding-top: 40px;
-    min-height: 100vh;
+.container {
+    width: 400px;
+    height: 870px;
+    border-radius: 24px;
+    background-color: #93B5CF;
+    max-width: 400px;
+    margin: 0 auto;
+    padding: 20px 10px 100px;
+    position: relative;
+}
+
+.circle {
+    position: fixed;
+    bottom: 32px;
+    left: 50%;
+    transform: translateX(-50%);
+    width: 56px;
+    height: 56px;
+    background-color:#0e2045;
+    border-radius: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+    cursor: pointer;
+    z-index: 10;
+}
+
+.circle button{
+    background: none;
+    cursor: pointer;
+    width: 56px;
+    height: 56px;
+    border-radius: 50%;
+}
+
+.circle-icon {
+    width: 32px;
+    height: 32px;
+    object-fit: contain;
+}
+
+.circle-icon img{
+    width: 32px;
+    height: 32px;
+    transform: rotate(180deg);
+    object-fit: contain;
+}
+
+.card-event{
+    background-color: #D9D9D9;
+    border-radius: 25px;
+    height: 75%;
+    padding: 10px;
     position: relative;
 }
 
@@ -27,15 +75,17 @@ form {
     flex-direction: column;
     align-items: center;
     gap: 15px;
-    padding: 20px;
+    padding: 75px 15px 50px 15px;
 }
 
 textarea {
+    transition: 0.3s;
     width: 80%;
+    opacity: 75%;
     max-width: 300px;
-    min-height: 40px;
+    height: 95px;
     padding: 10px;
-    font-size: 16px;
+    font-size: 25px;
     border: none;
     border-radius: 10px;
     resize: none;
@@ -45,11 +95,24 @@ textarea::placeholder {
     color: #999;
 }
 
+textarea:hover{
+    opacity: 100%;
+    transition: 0.7s;
+    width: 90%;
+    height: 110px;
+}
+
 .icon-button {
     width: 40px;
     height: 40px;
     cursor: pointer;
     margin-top: 20px;
+}
+
+.top-left {
+    position: absolute;
+    top: 8px;
+    left: 8px;
 }
 
 .actions {
