[FRONTEND] nuovoEvento.html and event.css fixed

--- a/Tranqueerity/src/main/style/event.css
+++ b/Tranqueerity/src/main/style/event.css
@@ -87,7 +87,7 @@ textarea {
     padding: 10px;
     font-size: 25px;
     border: none;
-    border-radius: 10px;
+    border-radius: 13px;
     resize: none;
 }
 
@@ -100,6 +100,15 @@ textarea:hover{
     transition: 0.7s;
     width: 90%;
     height: 110px;
+    border-radius: 21px;
+}
+
+.textarea-description{
+    height: 155px;
+}
+
+.textarea-description:hover{
+    height: 195px;
 }
 
 .icon-button {
@@ -111,8 +120,8 @@ textarea:hover{
 
 .top-left {
     position: absolute;
-    top: 8px;
-    left: 8px;
+    top: 3px;
+    left: 9px;
 }
 
 .actions {
