--- a/Tranqueerity/src/main/style/recensioneStyle.css
+++ b/Tranqueerity/src/main/style/recensioneStyle.css
@@ -96,21 +96,39 @@ body {
 }
 
 .review-section {
-    background-color: #D9D9D9;
+    background: linear-gradient(
+            145deg,
+            rgba(255, 255, 255, 0.4),
+            rgba(230, 235, 239, 0.55),
+            rgba(147, 181, 207, 0.35),
+            rgba(200, 200, 200, 0.1)
+    );
+    border: 1px solid rgba(255, 255, 255, 0.3);
+    box-shadow: 0 8px 24px rgba(0, 0, 0, 0.1);
+    backdrop-filter: blur(15px);
+    -webkit-backdrop-filter: blur(10px);
+    /*background-color: #D9D9D9;*/
     border-radius: 9px;
     padding: 0.75rem;
     margin-bottom: 1rem;
 }
 
 .text-area {
+    transition: 0.3s;
+    opacity: 75%;
     width: 100%;
     padding: 10px;
     border-radius: 10px;
-    border: none;
+    border: 0.2px solid rgba(128, 128, 128, 0.5);
     font-size: 16px;
     background-color: #f0f0f0;
     color: #333;
     margin-bottom: 5px;
+}
+
+.text-area:hover{
+    transition: 0.5s;
+    opacity: 95%;
 }
 
 .button1 {
@@ -122,11 +140,17 @@ body {
     box-sizing: border-box;
     text-decoration:none;
     color:#333;
-    background-color: white;
-    box-shadow:inset 0 -0.6em 0 -0.3em rgba(0,0,0,0.20);
+    background-color: rgba(255, 255, 255, 0.85);
+    box-shadow:inset 0 -0.6em 0 -0.3em rgba(0,0,0,0.10);
     text-align:center;
     position:relative;
     cursor:pointer;
+}
+
+.button1:hover{
+    transition: 0.3s;
+    background-color: rgba(255, 255, 255, 1);
+    border-radius:13px;
 }
 
 hr{
@@ -291,7 +315,35 @@ hr{
     display: none;
 }
 
+.glassmorphismEx{
+    background: rgba(255, 255, 255, 0.1); /* vetro semi-trasparente */
+    border-radius: 16px;
+    padding: 2rem;
+    backdrop-filter: blur(10px); /* effetto sfocato */
+    -webkit-backdrop-filter: blur(10px); /* supporto per Safari */
+    border: 1px solid rgba(255, 255, 255, 0.3); /* bordo sottile semi-trasparente */
+    box-shadow: 0 8px 24px rgba(0, 0, 0, 0.1); /* ombra leggera */
+    color: #000; /* testo leggibile */
+}
+
 .modal-content {
+    background: linear-gradient(
+            145deg,
+            rgba(255, 255, 255, 0.3),
+            rgba(232, 255, 255, 0.45),
+            rgba(8, 231, 236, 0.15)
+    );
+    border: 1px solid rgba(255, 255, 255, 0.3);
+    box-shadow: 0 8px 24px rgba(0, 0, 0, 0.1);
+    backdrop-filter: blur(15px);
+    -webkit-backdrop-filter: blur(10px);
+    padding: 20px 30px;
+    border-radius: 10px;
+    text-align: center;
+    cursor: pointer;
+}
+
+.modal-content1 {
     background: white;
     padding: 20px 30px;
     border-radius: 10px;
@@ -304,6 +356,11 @@ hr{
     font-size: 16px;
     border-radius: 15px;
     border-color: rgba(0, 0, 0, 0.35);
+}
+
+.modal-content button:hover {
+    transition: 0.3s;
+    font-size: 19px;
 }
 
 
