--- a/Tranqueerity/src/main/style/event.css
+++ b/Tranqueerity/src/main/style/event.css
@@ -62,8 +62,25 @@ body {
     object-fit: contain;
 }
 
-.card-event{
+.card-event1{
     background-color: #D9D9D9;
+    border-radius: 25px;
+    height: 75%;
+    padding: 10px;
+    position: relative;
+}
+
+.card-event {
+    background: linear-gradient(
+            145deg,
+            rgba(255, 255, 255, 0.5),
+            rgba(239, 242, 244, 0.65),
+            rgba(155, 191, 220, 0.45),
+            rgba(220, 219, 219, 0.25)
+    );
+    border: 1px solid rgba(255, 255, 255, 0.3);
+    box-shadow: 0 8px 24px rgba(0, 0, 0, 0.1);
+    backdrop-filter: blur(15px);
     border-radius: 25px;
     height: 75%;
     padding: 10px;
@@ -79,6 +96,11 @@ form {
 }
 
 textarea {
+    background: rgba(255, 255, 255, 0.75);
+    backdrop-filter: blur(10px);
+    -webkit-backdrop-filter: blur(10px);
+    border: 1px solid rgba(255, 255, 255, 0.3);
+    box-shadow: 0 8px 24px rgba(0, 0, 0, 0.1);
     transition: 0.3s;
     width: 80%;
     opacity: 75%;
@@ -86,7 +108,6 @@ textarea {
     height: 95px;
     padding: 10px;
     font-size: 25px;
-    border: none;
     border-radius: 13px;
     resize: none;
 }
