--- a/Tranqueerity/src/main/style/styles.css
+++ b/Tranqueerity/src/main/style/styles.css
@@ -133,10 +133,16 @@ body {
 }
 
 .search-text {
+    font-size: 14px;
     margin-left: 8px;
     background-color:#D9D9D9;
     padding: 5px;
     border-color: transparent;
+}
+
+.search-text:focus{
+    border-color: transparent;
+    outline: none;
 }
 
 .search-locat {
@@ -176,17 +182,37 @@ body {
 }
 
 .modal-content {
-    background: white;
+    /*background: white;*/
+    background: linear-gradient(
+            145deg,
+            rgba(255, 255, 255, 0.3),
+            rgba(232, 255, 255, 0.45),
+            rgba(8, 231, 236, 0.15)
+    );
+    border: 1px solid rgba(255, 255, 255, 0.3);
+    box-shadow: 0 8px 24px rgba(0, 0, 0, 0.1);
+    backdrop-filter: blur(15px);
+    -webkit-backdrop-filter: blur(10px);
     padding: 20px 30px;
     border-radius: 10px;
     text-align: center;
+    max-width: 370px;
+    width: 90%;
+    box-sizing: border-box;
+    cursor: pointer;
 }
 
 .modal-content button {
+    transition: 0.3s;
     margin: 10px;
     padding: 8px 16px;
     font-size: 16px;
     border-radius: 15px;
     border-color: rgba(0, 0, 0, 0.35);
+}
+
+.modal-content button:hover {
+    transition: 0.3s;
+    font-size: 19px;
 }
 
