--- a/Tranqueerity/src/main/style/styles.css
+++ b/Tranqueerity/src/main/style/styles.css
@@ -12,24 +12,69 @@ body {
     overflow-x: hidden;
 }
 
+header {
+    position: sticky;
+    top: -1.7em;
+    background-color: #93B5CF;
+    z-index: 10; 
+    padding-bottom: 0.5em;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.logo-container {
+    display: flex;
+    flex-direction: column;
+    margin-bottom: 0.5em;
+    align-items: center;
+}
+
+.logo-container.scrolled .title {
+    opacity: 0;
+    transform: translateY(-100%);
+}
+
+.logo-container.scrolled .logo {
+    transform: translateY(70%) scale(1.4);
+}
+
+header a {
+    text-decoration: none;
+}
+
+.logo{
+    max-height: 60px;
+    max-width: 60px;
+    left: 50%;
+    transform: translateY(30%);
+    transition: transform 0.3s ease-in-out;
+}
+
+.title {
+    font-size: 36px;
+    color: #0e2045;
+    text-shadow: 1px 1px 3px white;
+    transition: all 0.3s ease-in-out;
+}
+
+
 .container {
     height: 100vh;
     aspect-ratio: 9/18;
     border-radius: 24px;
     background-color: #93B5CF;
     margin: 0 auto;
-    padding: 20px 10px 100px;
+    padding: 0em 0.8em 1em 0.8em;
     position: relative;
     overflow-y: scroll;
 }
 
-.title {
-    text-align: center;
-    font-size: 36px;
-    color: #0e2045;
-    margin-top: 10px;
-    margin-bottom: 25px;
-    text-shadow: 1px 1px 3px white;
+.searchbar-container {
+    display: flex;
+    justify-content: center;
+    gap: 1em;
+    align-items: center;
 }
 
 .search-bar {
@@ -39,7 +84,6 @@ body {
     display: flex;
     align-items: center;
     padding: 0 15px;
-    margin-bottom: 20px;
 }
 
 .search-icon {
@@ -48,6 +92,31 @@ body {
     /*border: 2px solid #A3A3A3;
     border-radius: 50%;*/
 }
+
+.search-text {
+    font-size: 14px;
+    margin-left: 8px;
+    background-color:#D9D9D9;
+    padding: 5px;
+    border-color: transparent;
+}
+
+.search-text:focus{
+    border-color: transparent;
+    outline: none;
+}
+
+.search-locat {
+    position: relative;
+    display:flex;
+    justify-content: flex-end;
+    background-color:gray;
+    border-radius: 50px;
+    max-height: 44px;
+    max-width: 44px;
+    cursor: pointer;
+}
+
 
 .card-list {
     display: flex;
@@ -133,39 +202,6 @@ body {
     transform: rotate(180deg);
 }
 
-.search-text {
-    font-size: 14px;
-    margin-left: 8px;
-    background-color:#D9D9D9;
-    padding: 5px;
-    border-color: transparent;
-}
-
-.search-text:focus{
-    border-color: transparent;
-    outline: none;
-}
-
-.search-locat {
-    position: relative;
-    display:flex;
-    justify-content: flex-end;
-    background-color:gray;
-    border-radius: 50px;
-    margin-left: 25%;
-    max-height: 30px;
-    max-width: 35px;
-    cursor: pointer;
-}
-
-.logo{
-    top: 22px;
-    left: 20px;
-    max-height: 60px;
-    max-width: 60px;
-    position: absolute;
-}
-
 .modal {
     position: fixed;
     top: 0;
@@ -217,4 +253,3 @@ body {
     transition: 0.3s;
     font-size: 19px;
 }
-
