--- a/Tranqueerity/src/main/style/styles.css
+++ b/Tranqueerity/src/main/style/styles.css
@@ -276,3 +276,26 @@ header a {
     max-height: 1000px; /* un valore abbastanza grande da contenere tutto il contenuto */
     overflow: visible;
 }
+
+.rating {
+    display: flex;
+    gap: 3px;
+    font-size: 30px;
+    cursor: pointer;
+    text-shadow: 1px 1px 1px black;
+    transition: 0.3s;
+}
+
+.rating:hover{
+    font-size: 35px;
+    transition: 0.3s;
+}
+
+.star {
+    color: #ccc;
+    transition: color 0.3s ease-in-out;
+}
+
+.star.filled {
+    color: gold;
+}
