--- a/Tranqueerity/src/main/style/styles.css
+++ b/Tranqueerity/src/main/style/styles.css
@@ -93,6 +93,11 @@ header a {
     border-radius: 50%;*/
 }
 
+#search-btn {
+    background-color: #D9D9D9;
+    border: none;
+}
+
 .search-text {
     font-size: 14px;
     margin-left: 8px;
