[FRONT-END] stars voting system in aggiuntaLuogo.html fixed

--- a/Tranqueerity/src/main/style/creazioneLuogo.css
+++ b/Tranqueerity/src/main/style/creazioneLuogo.css
@@ -100,6 +100,10 @@ body {
     margin-bottom: 6px;
 }
 
+.opinion-section textarea {
+    min-height: 130px;
+}
+
 .user-name {
     font-weight: bold;
     color: #555;
