--- a/Tranqueerity/src/main/style/event.css
+++ b/Tranqueerity/src/main/style/event.css
@@ -207,3 +207,38 @@ textarea:hover{
     border-radius: 15px;
     margin-bottom: 1rem;
 }
+
+/* Nome dell'evento */
+.eventTitle
+{
+    font-size: 1.25rem; /* Titolo grande */
+    font-weight: 600;
+    margin: 0;
+    color: #333;
+}
+
+/* orario dell'evento*/
+.OrarioEvento {
+    font-size: 1.25rem; /* Titolo grande */
+    font-weight: 600;
+    margin: 0;
+    color: #333;
+    justify-content: flex-end;
+    text-align: right;
+}
+
+
+/* Descrizione */
+.cardDescription {
+    font-size: 1rem;
+    color: #555;
+    margin: 6px 0;
+    line-height: 1.4;
+}
+
+/* Luogo */
+.LuogoEvento {
+    font-size: 0.95rem;
+    color: #888;
+    margin-bottom: 6px;
+}
