--- a/Tranqueerity/src/main/style/styles.css
+++ b/Tranqueerity/src/main/style/styles.css
@@ -79,6 +79,7 @@ header a {
     justify-content: center;
     gap: 1em;
     align-items: center;
+    position: relative;
 }
 
 .search-bar {
@@ -317,3 +318,40 @@ header a {
 .star.filled {
     color: gold;
 }
+
+.icon-column {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 10px;
+    position: relative;
+}
+
+.event-button {
+    background-color: gray;
+    border-radius: 50%;
+    width: 42px;
+    height: 42px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    box-shadow: 0 3px 6px rgba(0,0,0,0.2);
+    opacity: 0;
+    pointer-events: none;
+    transition: all 0.3s ease;
+    z-index: 10;
+}
+
+.event-button.visible {
+    top: 0; /* scende in vista */
+    opacity: 1;
+    pointer-events: auto;
+}
+
+.event-icon {
+    width: 24px;
+    height: 24px;
+    filter: invert(1);
+}
+
